# opx-sai-vm

./: .gitreview  Makefile.am  README.md  configure.ac  libsai.la
.github/: CODEOWNERS
cfg/: Makefile  sai_vm_db.cfg  vm_dn_rules.sh
cfg/sai-db/: create_sai_acl_table.sql  create_sai_routing_table.sql  create_sai_switch_table.sql  create_sai_switching_table.sql  drop_sai_acl_table.sql  drop_sai_routing_table.sql  drop_sai_switch_table.sql  drop_sai_switching_table.sql
debian/: changelog  control  libopx-sai-vm1.install  rules
opx/: sai_acl_db_api.h  sai_acl_db_utils.h  sai_acl_npu_api.h  sai_acl_rule_utils.h  sai_acl_type_defs.h  sai_acl_utils.h  sai_bridge_api.h  sai_bridge_common.h  sai_bridge_main.h  sai_bridge_npu_api.h  sai_common_acl.h  sai_common_infra.h  sai_common_utils.h  sai_db_gen_utils.h  sai_debug_utils.h  sai_event_log.h  sai_fdb_api.h  sai_fdb_common.h  sai_fdb_main.h  sai_gen_utils.h  sai_hash_api_utils.h  sai_hash_object.h  sai_hostif_api.h  sai_hostif_common.h  sai_hostif_main.h  sai_infra_api.h  sai_ipmc_api.h  sai_ipmc_common.h  sai_l2mc_api.h  sai_l2mc_common.h  sai_l3_api.h  sai_l3_api_utils.h  sai_l3_common.h  sai_l3_mcast_common.h  sai_l3_mem.h  sai_l3_next_hop_group_utl.h  sai_l3_util.h  sai_lag_api.h  sai_lag_callback.h  sai_lag_common.h  (+76 more)
scripts/: Makefile
scripts/lib/python/: platform_netns.py
sos/: Makefile
sos/plugins/: dn_sai_common.py
src/: sai_gen_utils.c  sai_map_utl.cpp  sai_vm_npu_api_query.c  sai_vm_npu_init_config.c  sai_vm_shell.c
src/acl/: sai_acl_counter.c  sai_acl_debug.c  sai_acl_init.c  sai_acl_policer.c  sai_acl_range.c  sai_acl_rule.c  sai_acl_rule_utils.c  sai_acl_slice.c  sai_acl_table.c  sai_acl_table_group.c  sai_acl_table_group_member.c  sai_acl_utils.c  sai_vm_acl_counter.c  sai_vm_acl_range.c  sai_vm_acl_rule.c  sai_vm_acl_slice.c  sai_vm_acl_table.c
src/bridge/: sai_bridge.c  sai_bridge_db.cpp  sai_bridge_debug.c  sai_bridge_port.c  sai_bridge_utils.c  sai_vm_bridge.c
src/fc/: sai_vm_fc_port.c  sai_vm_fc_switch.c
src/hash/: sai_hash_obj.c
src/hostintf/: sai_hostintf.c  sai_hostintf_debug.c  sai_hostintf_utils.c  sai_vm_hostif.c
src/mirroring/: sai_mirror_common.c  sai_mirror_debug.c  sai_mirror_port.c  sai_mirror_utils.c  sai_vm_mirror.c
src/port/: sai_port.c  sai_port_attributes.c  sai_port_debug.c  sai_port_utils.c  sai_vm_port.c
src/qos/: sai_qos_buffer.c  sai_qos_buffer_common.c  sai_qos_buffer_util.c  sai_qos_debug.c  sai_qos_hierarchy.c  sai_qos_init.c  sai_qos_map_utils.c  sai_qos_maps.c  sai_qos_maps_debug.c  sai_qos_pfc_maps.c  sai_qos_pg.c  sai_qos_policer.c  sai_qos_policer_debugs.c  sai_qos_port.c  sai_qos_port_util.c  sai_qos_queue.c  sai_qos_sched_group.c  sai_qos_scheduler.c  sai_qos_scheduler_util.c  sai_qos_util.c  sai_qos_wred.c  sai_qos_wred_debugs.c  sai_vm_buffer.c  sai_vm_policer.c  sai_vm_qos.c  sai_vm_qos_maps.c  sai_vm_queue.c  sai_vm_sched_group.c  sai_vm_scheduler.c  sai_vm_wred.c
src/routing/: sai_l3_debug.c  sai_l3_encap_next_hop.c  sai_l3_init.c  sai_l3_ipmc.c  sai_l3_ipmc_group.c  sai_l3_ipmc_repl_group.c  sai_l3_ipmc_rpf_group.c  sai_l3_mem.c  sai_l3_neighbor.c  sai_l3_next_hop.c  sai_l3_next_hop_group.c  sai_l3_next_hop_group_utl.c  sai_l3_rif_utils.c  sai_l3_route.c  sai_l3_router_interface.c  sai_l3_util.c  sai_l3_vrf.c  sai_vm_l3_ipmc.c  sai_vm_l3_mcast.c  sai_vm_neighbor.c  sai_vm_next_hop.c  sai_vm_next_hop_group.c  sai_vm_rif.c  sai_vm_route.c  sai_vm_vrf.c
src/sai-db/: sai_acl_db_api.cpp  sai_acl_db_utils.cpp  sai_db_gen_utils.cpp  sai_db_init.cpp  sai_routing_db_api.cpp  sai_switch_db_api.cpp  sai_switching_db_api.cpp
src/sai-db/unit_test/: sai_db_unittest.cpp
src/samplepacket/: sai_samplepacket_common.c  sai_samplepacket_debug.c  sai_samplepacket_port.c  sai_samplepacket_utils.c  sai_vm_samplepacket.c
src/shell/: sai_shell.c  sai_shell_debug_handler.c  sai_shell_init.c
src/switch/: sai_vm_cfg.c  sai_vm_netlink.c  sai_vm_switch.c
src/switchinfra/: sai_extn_api_query.c  sai_func_query.c  sai_switch.c  sai_switch_debug.c  sai_switch_init_config.c  sai_switch_utils.c
src/switching/: sai_fdb.c  sai_fdb_debug.c  sai_fdb_utils.c  sai_l2mc.c  sai_l2mc_debug.c  sai_l2mc_group.c  sai_l2mc_utils.c  sai_lag.c  sai_lag_debug.c  sai_lag_utils.c  sai_mcast_utils.c  sai_stp.c  sai_stp_debug.c  sai_stp_utils.c  sai_vlan.c  sai_vlan_debug.c  sai_vlan_utils.c  sai_vm_fdb.c  sai_vm_l2mc.c  sai_vm_lag.c  sai_vm_mcast.c  sai_vm_stp.c  sai_vm_vlan.c
src/tunnel/: sai_tunnel_encap_nh.c  sai_tunnel_map_obj.c  sai_tunnel_obj.c  sai_tunnel_term_obj.c  sai_tunnel_utils.c  sai_vm_tunnel.c
src/udf/: sai_udf.c  sai_udf_group.c  sai_udf_utils.c  sai_vm_udf.c
src/unit_test/: run_test  sai_infra_unit_test.cpp  sai_switch_unit_test.cpp
src/unit_test/acl/: sai_acl_counter_unit_test.cpp  sai_acl_rule_unit_test.cpp  sai_acl_table_unit_test.cpp  sai_acl_unit_test_utils.cpp  sai_acl_unit_test_utils.h
src/unit_test/bridge/: sai_bridge_unit_test.cpp  sai_bridge_unit_test.h  sai_bridge_unit_test_utils.cpp  sai_bridge_unit_test_utils.h
src/unit_test/hash/: sai_hash_unit_test.cpp  sai_hash_unit_test.h  sai_hash_unit_test_utils.cpp
src/unit_test/hostintf/: sai_hostif_unit_test.cpp
src/unit_test/mirroring/: sai_mirror_unit_test.cpp  sai_mirror_unit_test.h  sai_mirror_unit_test_utils.cpp
src/unit_test/port/: sai_port_breakout_test_utils.cpp  sai_port_breakout_test_utils.h  sai_port_unit_test.cpp
src/unit_test/qos/: sai_policer_unit_test.cpp  sai_qos_buffer_unit_test.cpp  sai_qos_maps_unit_test.cpp  sai_qos_queue_unit_test.cpp  sai_qos_scheduler_group_unit_test.cpp  sai_qos_scheduler_unit_test.cpp  sai_qos_unit_test_utils.cpp  sai_qos_unit_test_utils.h  sai_wred_unit_test.cpp
src/unit_test/routing/: sai_l3_neighbor_unit_test.cpp  sai_l3_nexthop_unit_test.cpp  sai_l3_nexthopgroup_unit_test.cpp  sai_l3_rif_unit_test.cpp  sai_l3_route_unit_test.cpp  sai_l3_unit_test_utils.cpp  sai_l3_unit_test_utils.h  sai_l3_vrf_unit_test.cpp
src/unit_test/samplepacket/: sai_samplepacket_unit_test.cpp  (+2 more)
src/vport/: sai_vm_vport.cpp  sai_vm_vport_event.c
systemd/: opx-vm.service
(+20 files in other folders)
